--- a/popup.css
+++ b/popup.css
@@ -17,12 +17,13 @@
 
 .submit-data {
   font-size: 16px;
+  font-weight: medium;
   padding: 12px;
-  margin: 8px 0 0;
-  color: rgb(37, 56, 63);
-  background: rgb(135, 206, 235);
+  margin: 8px 0 4px;
+  color: #4a4a4a;
+  background: #00c2cb;
   outline: none;
-  border: 1px solid rgb(96, 147, 167);
+  border: 1px solid #a6a6a6;
   border-radius: 4px;
   cursor: pointer;
   transition: opacity 0.1s;
