--- a/slider.css
+++ b/slider.css
@@ -21,8 +21,8 @@
 
 #pl-comprehension-title {
   font-size: 14px;
-  font-weight: 600;
-  color: #fff;
+  font-weight: 500;
+  color: rgb(203, 203, 203);
   margin-bottom: 10px;
 }
 
